<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Race Yourself</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_fullscreen_activity2">FullscreenActivity2</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_login_signup_prompt">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>
    <string name="title_section5">Section 5</string>
    <string name="title_section6">Section 6</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signup_fragment_1_title">Race Friends and Motivate each other to get fit and have fun doing it!</string>
    <string name="signup_fragment_1_desc">Send and receive challenges from your friends, run together.</string>
    <string name="signup_fragment_2_title">Race Friends.</string>
    <string name="signup_fragment_2_desc">Send and receive challenges from your friends. Compare stats and enter group challenges together.</string>
    <string name="signup_fragment_3_title">Race Worldwide.</string>
    <string name="signup_fragment_3_desc">We\'ll find your perfect training partner to race with from our worldwide members. We\'ll match fitness levels across all abilities.</string>
    <string name="signup_fragment_4_title">Workouts are dead. \nRace Games are in!</string>
    <string name="signup_fragment_4_desc">We don\'t do workouts because we believe exercise can be fun, even when it\'s challenging. Race an athlete, race a train, even race zombies!</string>
    <string name="signup_fragment_5_title">Earn Sweat Points.\n Get new fitness games, free</string>
    <string name="signup_fragment_5_desc">You workout, you get rewarded. In our app store you\'ll find loads of app features to unlock using your sweat points.</string>
    <string name="signup_fragment_6_title">Visualise the Race on Google Glass</string>
    <string name="signup_fragment_6_desc">Connect your Glass to visualise your race in rich 3D - see your opponents racing beside you! Mobile users can hear the race through our audio commentary!</string>
    <string name="title_activity_matchmaking_distance">Opponent Matching</string>
    <string name="title_activity_matchmaking_finding">Finding Opponent</string>
    <string name="title_activity_choose_fitness">Select a Fitness Level</string>
    <string name="facebook_app_id">625999614089605</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="label_race_now">Race now</string>
    <string name="label_email_invite">Invite using email</string>
    <string name="title_set_challenge">Set Challenge</string>
    <string name="gps_title_1">Your GPS is disabled!</string>
    <string name="gps_title_2">Looking for satellites</string>
    <string name="gps_title_3">Your GPS signal is poor!</string>
    <string name="gps_title_4">Your GPS is good!</string>
    <string name="gps_description_1">Press settings to enable your GPS.</string>
    <string name="gps_description_2">Wait a moment whilst your device searches&#8230;</string>
    <string name="gps_description_3">Try moving to an open area without overhanging buildings or trees.</string>
    <string name="gps_description_4"></string>
    <string name="gps_action_1"></string>
    <string name="gps_action_2">Make sure you are outside with a clear view of the sky.</string>
    <string name="gps_action_3">You can continue with low accuracy but tracking may be intermittent.</string>
    <string name="gps_action_4">Starting the race&#8230;</string>
    <string name="gps_button_1">SETTINGS</string>
    <string name="gps_button_2"></string>
    <string name="gps_button_3">CONTINUE</string>
    <string name="gps_button_4">CONTINUE</string>
    <string name="cancel">CANCEL</string>


</resources>
