<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gameOverlayGps"
    android:background="#3000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_title_1"
        android:id="@+id/gameOverlayGpsTitle"
        android:layout_marginTop="20dp"
        android:textColor="#ce5557"
        android:layout_gravity="center_horizontal"
        style="@style/TextHeading2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/gps_description_1"
        android:gravity="left"
        android:id="@+id/gameOverlayGpsDescription"
        android:layout_marginTop="5dp"
        android:textColor="#888888"
        android:layout_gravity="center_horizontal"
        style="@style/TextBody" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/gameOverlayGpsImage"
        android:src="@drawable/ic_gps_red1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/gps_action_1"
        android:gravity="left"
        android:id="@+id/gameOverlayGpsAction"
        android:layout_marginTop="5dp"
        android:textColor="#888888"
        android:layout_gravity="center_horizontal"
        style="@style/TextBody"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#00000000"
            android:textColor="#eab91e"
            android:text="@string/cancel"
            android:id="@+id/gameOverlayGpsCancelButton" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#00000000"
            android:textColor="#88cca3"
            android:text="@string/gps_button_1"
            android:id="@+id/gameOverlayGpsActionButton" />
    </RelativeLayout>

    </LinearLayout>

</RelativeLayout>